--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,16 @@
     <artifactId>Management</artifactId>
     <version>1.0.0</version>
 
+    <!-- https://mvnrepository.com/artifact/junit/junit Biblioteka do testow jednostkowych JUnit-->
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-rc-1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+
 
 </project>
